--- a/sgi-avalom/app/globals.css
+++ b/sgi-avalom/app/globals.css
@@ -4,13 +4,17 @@
 
 @layer base {
   :root {
-    --background: 0 0% 100%;
+    --background: 0 0% 97%;
     --foreground: 222.2 84% 4.9%;
+
+    --backgroundWhite: 0 0% 100%;
+    --backgroundWhite-foreground: 222.2 84% 4.9%;
 
     --card: 0 0% 100%;
     --card-foreground: 222.2 84% 4.9%;
 
     --sideBar: 0 0% 100%;
+    --sideBar-foreground: 222.2 84% 4.9%;
 
     --popover: 0 0% 100%;
     --popover-foreground: 222.2 84% 4.9%;
@@ -29,6 +33,9 @@
 
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 210 40% 98%;
+
+    --nuevo: 207 100% 40%;
+    --nuevo-foreground: 207 100% 10%;
 
     --border: 214.3 31.8% 91.4%;
     --input: 214.3 31.8% 91.4%;
@@ -69,6 +76,9 @@
 
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 210 40% 98%;
+
+    --nuevo: 207 100% 64%;
+    --nuevo-foreground: 207 100% 10%;
 
     --border: 217.2 32.6% 17.5%;
     --input: 217.2 32.6% 17.5%;
